# PXD_vulkan_base

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
includes/: debug.h  gui_config.h  logger.h  logger.hpp  utility.h
shaders/: empty.frag
shaders/compiled/: empty.spv  empty_opt.spv  empty_spv.h
sources/: debug.cpp  logger.cpp
